--- a/QuangSEMI/templates/home/index.html.twig
+++ b/QuangSEMI/templates/home/index.html.twig
@@ -109,7 +109,7 @@
             <div class="banner-item-03">
                 <div class="text-content">
                     <h4>Last Minute</h4>
-                    <h2>Grab last minute deals</h2>
+                    <h2>Grab last minute deal</h2>
                 </div>
             </div>
         </div>
